--- a/demos/protoflyer/info.toml
+++ b/demos/protoflyer/info.toml
@@ -2,6 +2,6 @@ name = "protoflyer"
 id = 22105
 vendor = "px4"
 model = "fmu-v3"
-px4_version = "main"
-custom_fw_version = "rc1"
+px4_version = "v1.16.0-rc1"
+custom_fw_version = "1.2.3-alpha1"
 components = ["radiomaster_tx16s"]
