--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8, 3.9, 3.10, 3.11, 3.12]
-        ubuntu-version: [20.04, 22.04, 24.04]
+        python-version: [3.9, 3.10, 3.11, 3.12]
+        ubuntu-version: [22.04, 24.04]
     name: Python ${{ matrix.python-version }} on Ubuntu ${{ matrix.ubuntu-version }}
     steps:
       - uses: actions/checkout@v4
