[skip ci] skip install deps on test for the API

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,9 @@ on:
     branches: [main]
   workflow_dispatch:
 
+env:
+  EASY_PX4_INSTALL_DEPS: "false"
+
 jobs:
   test:
     runs-on: ubuntu-latest
