--- a/.github/workflows/test-easy-px4-utils.yml
+++ b/.github/workflows/test-easy-px4-utils.yml
@@ -1,18 +1,18 @@
-name: Run Tests
+name: easy_px4_utils tests
 
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
+  paths:
+      - "easy-px4-utils/**"
+      - "easy-px4-utils/pyproject.toml"
   workflow_dispatch:
-
-env:
-  EASY_PX4_INSTALL_DEPS: "false"
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
