--- a/.github/workflows/test-easy-px4-utils.yml
+++ b/.github/workflows/test-easy-px4-utils.yml
@@ -18,9 +18,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-22.04
-    defaults:
-      run:
-        working-directory: easy-px4-utils
     strategy:
       fail-fast: false
       matrix:
@@ -34,9 +31,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Upgrade pip and install dependencies
+        working-directory: ./easy-px4-utils
         run: |
           python -m pip install --upgrade pip
           pip install '.[test]'
       - name: Run tests with pytest
+        working-directory: ./easy-px4-utils
         run: |
           pytest
