--- a/easy_px4_utils/pyproject.toml
+++ b/easy_px4_utils/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "easy-px4-utils"
+name = "easy_px4_utils"
 version = "0.1.0"
 description = "Utility functions for easy-px4"
 readme = "README.md"
