--- a/.github/workflows/test-easy-px4-utils.yml
+++ b/.github/workflows/test-easy-px4-utils.yml
@@ -4,14 +4,14 @@ on:
   push:
     branches: [main]
     paths:
-      - "easy-px4-utils/**"
-      - "easy-px4-utils/pyproject.toml"
+      - "easy_px4_utils/**"
+      - "easy_px4_utils/pyproject.toml"
       - ".github/workflows/test-easy-px4-utils.yml"
   pull_request:
     branches: [main]
     paths:
-      - "easy-px4-utils/**"
-      - "easy-px4-utils/pyproject.toml"
+      - "easy_px4_utils/**"
+      - "easy_px4_utils/pyproject.toml"
       - ".github/workflows/test-easy-px4-utils.yml"
   workflow_dispatch:
 
@@ -30,12 +30,14 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Upgrade pip and install dependencies
-        working-directory: ./easy_px4_utils
+      - name: Upgrade pip
         run: |
           python -m pip install --upgrade pip
+      - name: Install package
+        working-directory: easy_px4_utils
+        run: |
           pip install .[test]
       - name: Run tests with pytest
-        working-directory: ./easy_px4_utils
+        working-directory: easy_px4_utils
         run: |
           pytest
