--- a/.github/workflows/test-easy-px4-utils.yml
+++ b/.github/workflows/test-easy-px4-utils.yml
@@ -38,6 +38,5 @@ jobs:
         run: |
           pip install .[test]
       - name: Run tests with pytest
-        working-directory: easy_px4_utils
         run: |
-          pytest
+          pytest easy_px4_utils/tests
