--- a/.github/workflows/test-easy-px4-utils.yml
+++ b/.github/workflows/test-easy-px4-utils.yml
@@ -30,9 +30,9 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Upgrade pip
+      - name: Upgrade pip and friends
         run: |
-          python -m pip install --upgrade pip
+          pip install --upgrade pip setuptools wheel
       - name: Install package
         working-directory: easy_px4_utils
         run: |
