--- a/.github/workflows/test-easy-px4-utils.yml
+++ b/.github/workflows/test-easy-px4-utils.yml
@@ -38,5 +38,6 @@ jobs:
         run: |
           pip install -e .[test]
       - name: Run tests with pytest
+        working-directory: easy_px4_utils
         run: |
-          python -m pytest easy_px4_utils/tests
+          python -m pytest
