--- a/easy_px4_utils/pyproject.toml
+++ b/easy_px4_utils/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "easy_px4_utils"
-version = "0.1.0"
+name = "easy-px4-utils"
+version = "0.1.1"
 description = "Utility functions for easy-px4"
 readme = "README.md"
 requires-python = ">=3.9"
@@ -20,8 +20,8 @@ dependencies = [
     "tomli; python_version < '3.11'"
 ]
 
-[tool.setuptools.packages.find]
-where = ["easy_px4_utils"]
+[tool.setuptools]
+packages = ["easy_px4_utils"]
 
 [project.urls]
 Homepage = "https://github.com/EOLab-HSRW/easy-px4.git"
